--- a/src/plonetheme/cuypershuis/theme/css/slideshow.less
+++ b/src/plonetheme/cuypershuis/theme/css/slideshow.less
@@ -1162,6 +1162,7 @@ body.slideshow-empty {
 		    letter-spacing: 0.00em;
 		    margin-bottom: 0px;
 		    line-height: 63px;
+		    text-shadow: 2px 4px 3px rgba(0, 0, 0, 0.3);
 		}
 
 		.event-date {
