--- a/src/plonetheme/cuypershuis/theme/css/variables.less
+++ b/src/plonetheme/cuypershuis/theme/css/variables.less
@@ -33,7 +33,7 @@
     line-height: 1.42857143;
 }
 
-@brand-primary: #dab203;
+@brand-primary: #1772ae;
 @brand-primary-black: #373739;
 @brand-primary-beige: #f8f3ef;
 @brand-primary-blue: #435073;
